--- a/app/titlecard/titlecard.css
+++ b/app/titlecard/titlecard.css
@@ -57,7 +57,7 @@
 	right: 0;
 	color: white;
 	font-family: '04b11';
-	font-size: 36pt;
+	font-size: 44pt;
 	text-shadow: 4px 4px 0px black;
 	text-align: right;
 }
@@ -66,7 +66,7 @@
 .titlecard-title-line-2 {
 	transform: translateX(100%);
 	transition: transform var(--tFunc);
-	padding-right: 8pt;
+	padding-right: 18pt;
 }
 
 .titlecard.closed .titlecard-title-line-1,
@@ -133,23 +133,17 @@
 .titlecard-border-text {
 	transition: transform var(--tFunc);
 	transform: translateX(calc(3px + calc(1% * var(--timer2))));
+	text-transform: uppercase;
 	position: absolute;
 	top: 10px;
 	right: 0px;
-	padding-right: 10px;
+	padding-right: 28px;
 	color: black;
 	font-family: '04b21';
 	font-size: 18pt;
 }
 
-.titlecard-field {
-}
-
 .titlecard.start .titlecard-field {
-	background-image: url(/Sonic/title-screen-emblem.png);
-	background-repeat: no-repeat;
-	background-size: contain;
-	background-position: center;
 	background-color: rgba(0,0,0,1);
 }
 
