--- a/app/ui/char-hud.css
+++ b/app/ui/char-hud.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	justify-content: center;
 }
 
 .hud .char-icon {
@@ -55,7 +56,7 @@
 
 .hud .char-icon.eggman {
 	background-image: url(/Sonic/monitor-screens.png);
-	background-position: -0px -64px;
+	background-position: -0px -80px;
 }
 
 .hud .char-icon.eggrobo {
