--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -3,17 +3,16 @@
 }
 
 .hud-top-left {
-	display: none;
 	display: block;
 	position: absolute;
 	top: 5px;
-	bottom: 0;
 	left: 5px;
 	right: 0;
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 	transform-origin: top left;
-	flex-direction: column;
-	justify-content: flex-start;
+	width: 240px;
 }
 
 .hud-top-right {
@@ -147,8 +146,9 @@
 }
 
 .viewport .hud-dark {
-	padding: 6px;
-	padding-left: 6px;
+	padding: 2px;
+	padding-left: 4px;
+	padding-right: 4px;
 	border-radius: 3px;
 	background-color: rgba(0,0,0,0.5);
 	pointer-events: initial;
