--- a/app/intro/card.css
+++ b/app/intro/card.css
@@ -38,6 +38,10 @@
 	filter: brightness(0) saturate(0);
 }
 
+.screen-card-boot-card.closing {
+	filter: brightness(0);
+}
+
 .screen-card-title-screen-card.opening,
 .screen-card-title-screen-card.closed {
 	opacity: 0;
@@ -49,16 +53,72 @@
 	font-family: '8-bit-pusab';
 }
 
-/*.screen-card-sean-card {
-	background-image: url(/sean-morris.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-}*/
+.screen-card-sean-card.opening {
+}
 
 .screen-card-title-screen-card {
 	background-image: url(/Sonic/title-screen-emblem.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-color: rgba(0,0,0,1);
+}
+
+.screen-card-title-screen-card .main-elements-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.screen-card-title-screen-card.opening .title-emblem {
+	transform: translateY(-150%);
+}
+
+.screen-card-title-screen-card.opened .title-emblem {
+	transform: translateY(0%);
+}
+
+.screen-card-title-screen-card .title-emblem {
+	width: 256px;
+	height: 200px;
+	margin-top: -10px;
+	margin-bottom: -30px;
+	background-image: url(/Sonic/title-screen-emblem.png);
+	transition: transform 1s 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.screen-card-title-screen-card.opening .backdrop {
+	transform: translateY(-25%);
+}
+
+.screen-card-title-screen-card.opened .backdrop {
+	transform: translateY(0%);
+}
+
+.screen-card-title-screen-card .backdrop {
+	transition: transform 3s ease-in-out;
+}
+
+.screen-card-title-screen-card .press-start {
+	filter: drop-shadow(0px 0px 3px rgba(0,0,0,1));
+	animation: press-start steps(1) infinite 600ms 2s forwards;
+	opacity: 0;
+}
+
+@keyframes press-start {
+	from{
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
 }
