--- a/app/intro/card.css
+++ b/app/intro/card.css
@@ -90,7 +90,7 @@
 	margin-top: -10px;
 	margin-bottom: -30px;
 	background-image: url(/Sonic/title-screen-emblem.png);
-	transition: transform 1s 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: transform 1s 1.75s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .screen-card-title-screen-card.opening .backdrop {
@@ -102,7 +102,7 @@
 }
 
 .screen-card-title-screen-card .backdrop {
-	transition: transform 3s ease-in-out;
+	transition: transform 1.5s 1s ease-out;
 }
 
 .screen-card-title-screen-card .press-start {
