--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -382,15 +382,23 @@ span.arrow-west {
 
 .focus-me {
 	font-size: 2em;
-	z-index: 1000;
+	z-index: 1000000;
 	background-color: white;
-	color: red;
+	color: white;
 	pointer-events: none;
-	transition: opacity 0.25s ease-in;
 }
 
-.viewport:focus .focus-me {
-	transition: opacity 0.2s ease-out;
+.viewport .status-message,
+.focus-me .status-message {
+	transition: transform 0.5s ease-out, opacity 0.25s 0.25s ease-out;
+	transform: scaleX(1);
+	opacity: 1;
+}
+
+.viewport .status-message.hide,
+.viewport:focus-within .focus-me .status-message {
+	transition: transform 0.5s ease-out, opacity 0.25s ease-in;
+	transform: scaleX(0);
 	opacity: 0;
 }
 
@@ -405,7 +413,7 @@ span.arrow-west {
 	justify-content: center;
 	--distance: 4px;
 	--time: 30ms;
-	z-index: 1000;
+	z-index: 100000;
 	pointer-events: none;
 }
 
