Fixing slope jump bug that set momentum to 0

--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -230,12 +230,13 @@ section.filters {
 }
 
 /*.viewport .point-actor:not(.region):not(.actor-water-fall):not(.actor-water-jet) canvas,*/
+
 .viewport-particles > *,
 .viewport .point-actor.actor-drill-car .sprite,
 .viewport .point-actor:not(.region):not(.actor-water-fall):not(.actor-water-jet):not(.actor-super-ring):not(.actor-drill-car) {
-	--outlineColor: black;
+	--outlineColor: rgba(0,0,0,1);
 	filter:
-		drop-shadow(1px 1px 0px var(--outlineColor))
+		drop-shadow(1px 0.5px 0px var(--outlineColor))
 		drop-shadow(-1px 1px 0px var(--outlineColor))
 		drop-shadow(-1px -1px 0px var(--outlineColor))
 		drop-shadow(1px -1px 0px var(--outlineColor));
